tests/ui/error-codes/E0534.stderr
error[E0534]: expected one argument
  --> $DIR/E0534.rs:1:1
   |
LL | #[inline()]
   | ^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0534`.
